# qmltermwidget

./: CMakeLists.txt  qml.qrc
debian/: changelog
lib/: tools.cpp
src/: ksession.cpp  main.cpp
test-app/: test-app.qml
